[project]
name = "taboo-trainer"
version = "0.1.0"
description = "Taboo model-organism LoRA trainer (Unsloth) for mech-interp research"
requires-python = ">=3.13"
dependencies = [
    "unsloth>=2026.6.9",
    "trl",
    "transformers",
    "datasets",
    "huggingface_hub",
]

# Script-only repo: don't try to build/install this project itself, just its deps.
[tool.uv]
package = false
